# e-Rust

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: Cargo.toml
backend/.sqlx/: query-1138c7174cc76cfcaa50c790f75e38eff9be4a6067bbe657c7c45effd31b67da.json  query-139b9291f05513de5252982f63da550d3bd7e20345180ff2814c073ad9a59d9e.json  query-13f29aef6f0e4bc4f5aee5040833e5d228f3e205503aff94ab64508e71c39f2d.json  query-203507a32bdad4ee6ddefc0e2cdc7b2ce865d446194d7aef2513777dfc658a34.json  query-20e1755aa366858afb630b99bf9303fcb8d0c2c44988c646c11fc628beb16539.json  query-232c5796a98240f357b4f9d4e097c78927aa398a2a80c9ad88fea625a0053065.json  query-2419c14654271ab171eee8fd066a0e3716c6d5c802b5fff0052b883e45fcce36.json  query-275de004339d178a7982530020a0d33ea25e0eea95733cd4f35943a4cc81c583.json  query-2888e757805008a7013e08e130d4827df83ad43e63b1697f78aa6653e0dcd246.json  query-2f0f0aa98695d0de5e8ed285b3f2e1535818cf9804b6c8dd21a4264b4da82291.json  query-3ba8d27c6d533fe071b0213f79468ecaa27fe9a392a2336cd2c405db96935fc3.json  query-3f0d74ef229c2f21f444fe643504242f5fc007538c7fce74d0752c853e182a5f.json  query-46478ca93b248a2c9cbafdcefe096bac4d2c4cf843f1873dfe0092ca2f0874ba.json  query-4ab4b16f945baa4145928e7481f67bafc7acc79c115a019a210ede1c26a3c180.json  query-4e9492c8b3f29f3b39f50017005226ef9117b4a9032e8b57f4304528ee7f618b.json  query-4f1623e00680059ea6109b83399b56b34f86422128e08972dacd1c0ed800679d.json  query-54aef694d718feef9ecb95f3d4da15c8438fba07099efcbd6e80dcbc1fd3d3d5.json  query-54fe15c3c21a6d2884ae67cd6dc64974a8cdf226f8f51d7bf52e5fa5ccc31fe0.json  query-5b57fb632b32dfe20c208a4630e4567cd8d2e245cc1e9f27d561f5b12deb9add.json  (+37 more)
backend/migrations/: 20260409000001_create_enums.sql  (+6 more)
(+96 files in other folders)
