[package]
name = "crm-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "crm-backend"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
validator.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2 = "0.10"
hex = "0.4"
bigdecimal = "0.4"

[dev-dependencies]
axum-test = "16"
